libs/preprocessor/tests/errors/pe2_unexpected_eof/stderr.ansi
[0m[1m[38;5;9merror[PE2][0m[1m: unexpected end of file[0m
  [0m[34m┌─[0m source.hpp:1:4
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #if
  [0m[34m│[0m    [0m[31m^[0m [0m[31munexpected end of file[0m

